--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tabler/icons-react": "^2.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
