--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.1",
     "@tabler/icons-react": "^2.11.0",
+    "chart.js": "^3.7.0",
+    "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
